# Project8_Vivian

./: Cargo.toml  Makefile  README.md  main.py  python_performance.md  requirements.txt  rust_performance.md  test_main.py
.github/workflows/: pythonCI.yml  rustCI.yml
lib/: CRUD.py  load_data.py
src/: main.rs  test_main.rs
tests/: test_main.rs
